# TmDS

./: .gitignore  PROJECT-OVERVIEW.md  README.md  package.json  pyproject.toml
.github/workflows/: deploy-pages.yml
Harness/: Architecture.md  Constitution.md  Content-Spec.md  Page-QA-Plan.md  QA-Gate.md  R2-Audit-Bundle.md  Style-Guide.md
data/notebooklm/: excluded.md  index.md
data/notebooklm/chapters/: 001__front-preface.md  002__front-notes.md  003__제2장-심판의-법적-성질.md  004__제3장-특허심판의-종류.md  005__제2장-심판청구서-접수-후-절차-심판정책과.md  006__제3장-통지서-등의-처리요령.md  007__제4장-제3자에-의한-심판서류의-열람-복사.md  008__제5장-증거물-등-보관물의-관리-및-반환.md  009__제6장-심판서류의-반출금지-및-비밀누설죄.md  010__제7장-심판통계-및-판례집-발간.md  011__제2장-심판청구서의-방식위반-조사.md  012__제3장-방식심사에-따른-조치.md  013__제2장-심판관의-제척-및-기피.md  (+133 more)
data/research/: paragraph-overrides.json
data/source/: README.md  source-config.json
pipeline/: __init__.py  build_content.py  build_images.py  build_inventory.py  build_notebooklm_sources.py  build_outline.py  build_r2_audit_bundle.py  build_toc.py  common.py  qa_content.py  qa_page_audit.py  qa_prepare.py  qa_review_batches.py  qa_review_queue.py  review_layout.py  sync_web_generated.py
tests/: test_build_content.py  test_build_notebooklm_sources.py  test_build_outline.py  test_build_r2_audit_bundle.py  test_build_toc.py  test_common.py  test_page_label.py  test_qa_page_audit.py  test_qa_review_batches.py  test_qa_review_queue.py  test_review_layout.py  test_sync_web_generated.py
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  main.tsx  styles.css
(+61 files in other folders)
